@@ -1,3 +1,8 @@
+2008-03-12  Badlop  <badlop@process-one.net>
+
+	* src/web/mod_http_bind.erl (start): Provide explanation in error
+	message when module is already started for another vhost
+
 2007-12-22  Badlop  <badlop@process-one.net>
 
 	* doc/mod_http_bind.tex: Added explanation about http_bind option
